--- a/ui/src/containers/dumb/Employee/EmployeeChatPage.css
+++ b/ui/src/containers/dumb/Employee/EmployeeChatPage.css
@@ -26,6 +26,7 @@ html, #root, [data-reactroot], #whole-page {
     float:right;
     width: 50%;
     height: 100%;
+    background-color: white;
 }
 
 /*employee_Topic_Column*/
@@ -37,6 +38,7 @@ html, #root, [data-reactroot], #whole-page {
 
 #topic_searchField{
     border-bottom: solid grey;
+    background-color: rgb(207,210,213);
 }
 
 #topics_field{
@@ -45,6 +47,7 @@ html, #root, [data-reactroot], #whole-page {
     overflow-y: auto;
     overflow-x: hidden;
     position: relative;
+    background-color: rgb(207,210,213);
 }
 
 #topics_field::-webkit-scrollbar-track
